yaapp/media/css/webapp.css
/* ... */
.yacheckbox {
    display:block;
    height:17px;
    width:17px;
    border:1px solid #bebebe;
    border-radius:5px;
    box-shadow:0px 2px 2px #bebebe;
}

.no-margin {
	margin:0px;
}

/**
 * responsive hidden
 */

 .signup-btns .mobile-social-btn {
    display:none;
 }

 .signup-container .mobile-lost-password {
    display:none;
 }

 .signup-container .mobile-signin-link {
    display:none;
 }

/* Landscape phones and down */
@media (max-width: 480px)  {

/*-- HEADER --*/

/*-- CONTAINER --*/
	.container {
    width:100%;
    max-width:480px;
    }

	#results {
		width:480px;
	}
	#pagination {
		margin-left:18.5%;
	}

/*-- MENU --*/
	#sound-level {
		display:none;
	}
	.header-separation {
		display:none;
	}
    #search-bar{
        display:none;
    }


/*-- SUBMENU --*/
	#fix-genre {
		display:none;
	}
    .genre-selector {
        display:none;
    }

	#radio-style-symbol {
		display:none;
	}
	#create-radio {
		width:90px;
	}
	#create-radio:hover {
		width:90px;
	}
	#sub-header-separation {
		display:none;
	}
    #sub-header-pointer {
        display:none;
    }
    .selected {

    }
    #selection, #top, #friends, #favorites {
        display:none;
    }

    #sub-header-nav {
        width:185px
    }

    #sub-header-nav li,
    #sub-header-nav li .first {
        width:30px;
        height:30px;
        padding-left:0px;
        padding-top:0px;
    }

    #sub-header-nav li .mobile-selection {
        display:block;
        height:40px;
        width:40px;
        background-image:url('../app/images/selection-sub-menu.png');
        background-repeat:no-repeat;
        margin-left:25px;
        margin-top:20px
    }
    #sub-header-nav li .mobile-top {
        display:block;
        height:30px;
        width:30px;
        background-image:url('../app/images/top-sub-menu.png');
        margin-top:12px;
        margin-left:20px;
    }
    #sub-header-nav li .mobile-friends {
        display:block;
        height:30px;
        width:30px;
        background-image:url('../app/images/friends-sub-menu.png');
        margin-top:12px;
        margin-left:20px;
    }
    #sub-header-nav li .mobile-favorites {
        display:block;
        height:30px;
        width:30px;
        background-image:url('../app/images/favorites-sub-menu.png');
        margin-top:14px;
        margin-left:24px;
    }
    #search-bar {
        width:80px;
        float:left;
    }
	#search-bar #search-input {
        width:50px;
    }

/*-- RADIO-CELL --*/
	.profile-background, .radio-cells {
		width:480px;
	}

/*-- SIGNUP --*/
    .signup-container {
        width:100%;
        max-width:480px;
        height:100%;
    }

    .signup-container h2 {
        font-size:28px;
        margin:20px 0px;
    }

    .signup-container h3 {
        font-size: 19px;
    }

    .signup-container .signup-btn-fbk, .signup-container .signup-btn-twitter {
        width:80%;
        margin: 10px 10%;
    }

    .signup-container #signup-separation-line {
        margin:20px 0px;
    }

    .signup-container #signup-input input, .signup-container #signup-input .right-input {
        width:80%;
        margin: 10px 0%;
        padding-left:10px;
    }

    .signup-container #signup-input #signup-save-btn {
        margin-right:2px;
    }

    .signup-btns .screen-social-btn {
        display:none;
    }

    .signup-btns .mobile-social-btn {
        display:block;
        text-align:center;
        margin:0px;
    }

    .signup-container #signup-input {
        margin-top:10px;
    }

    .signup-container h3 a {
        display: block;
        width: 100%;
        text-align: center;
        color: #08C;
        font-size: 19px;
        font-weight: normal;
        margin:10px 0px;
        line-height:30px;
    }

    .signup-container .mobile-lost-password {
        width:100%;
        text-align:center;
        text-decoration: underline;
        color:#7C7C7C;
        margin:0px;
    }

/*-- PROFILE --*/
	.profile-bio {
		width:225px;
		height:60px;
		float:left;
		clear:both;
	}
	.user-btn {
		float:left;
		margin:0px;
		margin-right:10px;
		margin-bottom:10px;
	}
	#infos h2 {
		display:block;
		float:none;
	}
	#comments,
	#radios-btn,
	#favorites-btn,
	#friends-btn,
	.sd-hd-small,
	.validated {
		display:none;
	}

/*-- MY RADIO --*/
    .radio-with-stats-cells .radio-with-stats {
        background-image:url('../app/images/my-radio/my-radio-bg-mobile.png');
    }
    .radio-with-stats-cells .radio-with-stats {
        width:465px;
        height:520px;
    }
    .radio-with-stats .stats {
        float:left;
        display:block;
    }
    .radio-with-stats .chartdiv {
        height:20%;
        width:20%;
        height:45% !important;
        width:90% !important;
    }

/*-- FOOTER --*/

	#connected-users,
    .footer-separation {
		display:none;
	}

    #footer {
        width:100%;
        position:absolute;
        margin-left:-20px;
        margin-right:-20px;
    }

    #minutes {
        text-align:center;
        width:40%;
        position:relative;
        float:none;
        margin:20px auto;
    }

    #minutes p {
        position:static;
        width:auto;
        margin-left:0;
        text-align:center;
    }

    #minutes span {
        font-size:32px;
        margin-top:20px;
        float:none;
        margin:0 auto;
    }

    #contacts {
       display:none;
    }
}
/* ... */

